src/test/ui/issues/issue-17758.nll.stderr
error[E0521]: borrowed data escapes outside of method
  --> $DIR/issue-17758.rs:7:9
   |
LL |     fn bar(&self) {
   |            ----- `self` is a reference that is only valid in the method body
LL |         self.foo();
   |         ^^^^^^^^^^ `self` escapes the method body here

error: aborting due to previous error

